--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li>
             </ul>
             <span class="block lg:ml-3.5">
-                        <a class="no-underline" href="https://apps.apple.com/us/app/epoc/id1596317383">
+                        <a class="no-underline" href="https://testflight.apple.com/join/Qm1AvfH6">
                             <i class="fab fa-apple text-xl transition-all duration-200 mr-1.5"></i>
                         </a>
                         <a class="no-underline" href="https://play.google.com/store/apps/details?id=fr.inria.epoc">
@@ -87,7 +87,7 @@
         <div class="mb-16 lg:mt-32 xl:mt-40 xl:mr-12">
             <h1 class="h1-large mb-5">Application de mobile learning</h1>
             <p class="p-large mb-8">Des formations gratuites et ludiques accessibles hors ligne.</p>
-            <a class="btn-solid-lg" href="https://apps.apple.com/us/app/epoc/id1596317383"><i class="fab fa-apple"></i>Télécharger</a>
+            <a class="btn-solid-lg" href="https://testflight.apple.com/join/Qm1AvfH6"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=fr.inria.epoc"><i class="fab fa-google-play"></i>Télécharger</a>
         </div>
         <div class="xl:text-right">
@@ -503,7 +503,7 @@
         </div>
         <div class="lg:mt-24 xl:mt-44 xl:ml-12">
             <p class="mb-9 text-gray-800 text-3xl leading-10">Télécharger la maintenant sur iOS ou Android.</p>
-            <a class="btn-solid-lg" href="https://apps.apple.com/us/app/epoc/id1596317383"><i class="fab fa-apple"></i>Télécharger</a>
+            <a class="btn-solid-lg" href="https://testflight.apple.com/join/Qm1AvfH6"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=fr.inria.epoc"><i class="fab fa-google-play"></i>Télécharger</a>
         </div>
     </div> <!-- end of container -->
