Finnish templates with variables and metadata

--- a/custom/epoc-theme/base.html
+++ b/custom/epoc-theme/base.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="ePoc (Electronic Pocket Open Course) est une application de formation numérique pour mobile. Elle a été développée au sein du Learning Lab Inria." />
+    <meta name="description" content="{{ page.meta.description }} {{ config.extra.description }}" />
     <meta name="author" content="Inria Learning Lab" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="ePoc Mobile learning" /> <!-- website name -->
-    <meta property="og:site" content="https://epoc.inria.fr/" /> <!-- website link -->
-    <meta property="og:title" content="ePoc Mobile learning" /> <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="ePoc (Electronic Pocket Open Course) est une application de formation numérique pour mobile. Elle a été développée au sein du Learning Lab Inria." /> <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="https://epoc.inria.fr/" /> <!-- where do you want your post to link to -->
+    <meta property="og:site_name" content="{{ page.title }} - ePoc Mobile learning" /> <!-- website name -->
+    <meta property="og:site" content="{{ config.site_url }}" /> <!-- website link -->
+    <meta property="og:title" content="{{ config.site_name }}" /> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="{{ page.meta.description }} {{ config.extra.description }}" /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="{{ config.site_url }}{{ page.meta.img }}" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="{{ page.canonical_url  }}" /> <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image" /> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>{{ page.title }} - ePoc Mobile learning</title>
+    <title>{{ page.title }} - {{ config.site_name }}</title>
 
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet" />
     <link href="/css/fontawesome-all.css" rel="stylesheet" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/@tailwindcss/typography@0.4.1/dist/typography.min.css" rel="stylesheet" />
     <link href="/css/swiper.css" rel="stylesheet" />
     <link href="/css/magnific-popup.css" rel="stylesheet" />
     <link href="/css/styles.css" rel="stylesheet" />
@@ -34,11 +35,11 @@
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
+{% include "epoc-theme/nav.html" %}
+
 {% block content %}
 {{ page.content }}
 {% endblock %}
-
-{% include "epoc-theme/header.html" %}
 
 {% include "epoc-theme/footer.html" %}
 
