--- a/custom/epoc-theme/full.html
+++ b/custom/epoc-theme/full.html
@@ -8,9 +8,9 @@
     </div> <!-- end of container -->
 </header> <!-- end of header -->
 <!-- end of header -->
-<div id="details" class="pb-8 pt-8">
-    <div class="container px-4 sm:px-8 markdown">
+<div id="details" class="container px-4 sm:px-8">
+    <article class="prose lg:prose-xl" style="max-width:max-content;">
         {{ super() }}
-    </div>
+    </article>
 </div>
 {% endblock %}
