Replace home screenshots and add inria logo

--- a/custom/epoc-theme/home.html
+++ b/custom/epoc-theme/home.html
@@ -139,7 +139,7 @@
 <!-- Testimonials -->
 <div class="slider-1 py-32 bg-gray">
     <div class="container px-4 sm:px-8">
-        <h2 class="mb-12 text-center lg:max-w-xl lg:mx-auto">L'équipe derrière ePoc</h2>
+        <h2 class="mb-12 text-center lg:max-w-xl lg:mx-auto">Développée par</h2>
 
         <!-- Card Slider -->
         <div class="slider-container">
@@ -149,11 +149,7 @@
                     <!-- Slide -->
                     <div class="swiper-slide">
                         <div class="card">
-                            <img class="card-image" src="images/jean-marc.jpg" alt="Jean-Marc Hasenfratz" />
-                            <div class="card-body">
-                                <p class="testimonial-author">Jean-Marc Hasenfratz</p>
-                                <p class="italic mb-3">Responsable Inria Learning Lab</p>
-                            </div>
+                            <img class="card-image" src="images/logo-inria.png" alt="Logo Inria" />
                         </div>
                     </div> <!-- end of swiper-slide -->
                     <!-- end of slide -->
@@ -161,33 +157,18 @@
                     <!-- Slide -->
                     <div class="swiper-slide">
                         <div class="card">
-                            <img class="card-image" src="images/benoit.jpg" alt="Benoit Rospars" />
-                            <div class="card-body">
-                                <p class="testimonial-author">Benoit Rospars</p>
-                                <p class="italic mb-3">Ingénieur Informatique</p>
-                            </div>
+                            <img class="card-image" src="images/logo-ill.png" alt="Logo Inria Learning Lab" />
                         </div>
                     </div> <!-- end of swiper-slide -->
                     <!-- end of slide -->
-
-                    <!-- Slide -->
-                    <div class="swiper-slide">
-                        <div class="card">
-                            <img class="card-image" src="images/aurelie.jpg" alt="Aurélie Laguarrigue" />
-                            <div class="card-body">
-                                <p class="testimonial-author">Aurélie Laguarrigue</p>
-                                <p class="italic mb-3">Ingénieure pédagogique</p>
-                            </div>
-                        </div>
-                    </div> <!-- end of swiper-slide -->
                     <!-- end of slide -->
 
                 </div> <!-- end of swiper-wrapper -->
 
-                <!-- Add Arrows -->
+                <!-- Add Arrows
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
-                <!-- end of add arrows -->
+                end of add arrows -->
 
             </div> <!-- end of swiper-container -->
         </div> <!-- end of slider-container -->
