--- a/custom/epoc-theme/base.html
+++ b/custom/epoc-theme/base.html
@@ -29,6 +29,7 @@
     <link href="/css/swiper.css" rel="stylesheet" />
     <link href="/css/magnific-popup.css" rel="stylesheet" />
     <link href="/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
     <!-- Favicon  -->
     <link rel="icon" href="/images/favicon.png" />
@@ -52,6 +53,7 @@
 <script src="/js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
 <script src="/js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
 <script src="/js/scripts.js"></script> <!-- Custom scripts -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 <!-- Matomo -->
 <script>
