Add source link

--- a/custom/epoc-theme/copyright.html
+++ b/custom/epoc-theme/copyright.html
@@ -4,6 +4,11 @@
         <ul class="mb-4 list-unstyled p-small">
             <li class="mb-2"><a href="/terms">Conditions d'utilisation</a></li>
             <li class="mb-2"><a href="/privacy">Vie privée</a></li>
+            <li class="mb-2">
+                <a href="{{ config.repo_url }}" target="_blank">
+                    <i class="fab fa-gitlab"></i> Code source
+                </a>
+            </li>
         </ul>
         <p class="pb-4 p-small statement">Copyright © <a href="https://twitter.com/InriaLearnLab" class="no-underline">Inria Learning Lab</a></p>
     </div> <!-- end of container -->
