Fix wording and screenshots

--- a/custom/epoc-theme/editeur.html
+++ b/custom/epoc-theme/editeur.html
@@ -6,7 +6,10 @@
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
         <div class="mb-16 mt-16 xl:mr-12">
             <h1 class="h1-large mb-5">Editeur ePoc</h1>
-            <p class="p-large mb-8">Un editeur de mobile learning gratuit et open source.</p>
+            <p class="p-large mb-8">
+                L'application de bureau permettant de concevoir, construire et publier votre propre formation de mobile learning au format ePoc.
+            </p>
+            <p class="p-large mb-8">Gratuit et open <a href="{{ config.repo_url }}" target="_blank">source</a>. Développé par <a href="https://inria.fr/">Inria</a>.</p>
             <a class="btn-solid-lg" href="{{ config.extra.editor_link_windows }}"><i class="fab fa-windows"></i>Télécharger</a>
             <a class="btn-solid-lg" href="{{ config.extra.editor_link_macos }}"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="{{ config.extra.editor_link_linux }}"><i class="fab fa-linux"></i>Télécharger</a>
@@ -70,12 +73,13 @@
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-12 lg:gap-x-12">
         <div class="lg:col-span-7">
             <div class="xl:mr-14">
-                <img class="inline" src="/images/video.png" alt="alternative" />
+                <img class="inline" src="/images/editeur-video.png" alt="alternative" />
             </div>
         </div> <!-- end of col -->
         <div class="lg:col-span-5">
             <div class="mt-16 lg:mt-0 xl:mt-24">
-                <h2 class="mb-6">Scénario pédagogique en quelques clics :</h2>
+                <h2 class="mb-6">Prêt à l'emploi</h2>
+                <p class="mb-4">Des contenus prêts à l’emploi et personnalisables selon vos besoins</p>
                 <ul class="list mb-7 space-y-2">
                     <li class="flex">
                         <i class="fas fa-chevron-right"></i>
@@ -87,7 +91,7 @@
                     </li>
                     <li class="flex">
                         <i class="fas fa-chevron-right"></i>
-                        <div>Embranchement, évaluation, attestation de réussite et badges</div>
+                        <div>Evaluation, attestation de réussite et badges</div>
                     </li>
                 </ul>
             </div>
@@ -102,16 +106,17 @@
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-12 lg:gap-x-12">
         <div class="lg:col-span-5">
             <div class="xl:mt-32">
-                <h2 class="mb-6">Prêt à l'emploi</h2>
-                <p class="mb-4">Concevoir et créer vos formations rapidement et facilement de A à Z</p>
-                <p class="mb-4">Des contenus prêts à l’emploi et personnalisables selon vos besoins</p>
+                <h2 class="mb-6">Scénario pédagogique en quelques clics</h2>
+                <p class="mb-4">
+                    Construisez votre scénario pédagogique à embranchement à l'aide d'une interface visuelle et ergonomique
+                </p>
                 <!--<a class="btn-solid-reg popup-with-move-anim mr-1.5" href="#details-lightbox">Lightbox</a>
                 <a class="btn-outline-reg" href="article.html">Details</a>-->
             </div>
         </div> <!-- end of col -->
         <div class="lg:col-span-7">
             <div class="mb-12 lg:mb-0 xl:mr-14">
-                <img class="inline" src="/images/quiz.png" alt="alternative" />
+                <img class="inline" src="/images/editeur-scenario.png" alt="alternative" />
             </div>
         </div> <!-- end of col -->
     </div> <!-- end of container -->
