--- a/custom/epoc-theme/home.html
+++ b/custom/epoc-theme/home.html
@@ -6,7 +6,8 @@
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
         <div class="mb-16 lg:mt-32 xl:mt-40 xl:mr-12">
             <h1 class="h1-large mb-5">Application de mobile learning</h1>
-            <p class="p-large mb-8">Des formations gratuites et ludiques proposées par des experts scientifiques.</p>
+            <p class="p-large mb-8">Des formations courtes et ludiques proposées par des experts scientifiques.</p>
+            <p class="p-large mb-8">Gratuite et open <a href="{{ config.repo_url }}" target="_blank">source</a>. Développé par <a href="https://inria.fr/">Inria</a>.</p>
             <a class="btn-solid-lg" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.apple_link else config.extra.google_link }}"><i class="fab fa-google-play"></i>Télécharger</a>
         </div>
