--- a/custom/epoc-theme/full.html
+++ b/custom/epoc-theme/full.html
@@ -1,8 +1,8 @@
-{% extends "epoc-theme/base.html" %}
+{% extends "main.html" %}
 
-{% block content %}
+{% block hero %}
 <!-- Header -->
-<header id="header" class="header pt-28 text-center md:pt-36 lg:text-left xl:pt-44">
+<header id="header" class="header pt-28 text-center md:pt-36 xl:pt-44">
     <div class="container px-4 sm:px-8">
         <h1 class="h1-large mb-5">{{ page.title }}</h1>
     </div> <!-- end of container -->
