--- a/custom/epoc-theme/editeur.html
+++ b/custom/epoc-theme/editeur.html
@@ -22,7 +22,7 @@
 <header id="header" class="header py-28 text-center md:pt-36 lg:text-left xl:pt-44 xl:pb-32">
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
         <div class="mb-16 mt-16 xl:mr-12">
-            <h1 class="h1-large mb-5">Editeur ePoc</h1>
+            <h1 class="h1-large mb-5">Editeur ePoc <small>(beta)</small></h1>
             <p class="p-large mb-8">
                 L'application de bureau permettant de concevoir, construire et publier votre propre formation de mobile learning au format ePoc.
             </p>
