Modifying editor page

--- a/custom/epoc-theme/editeur.html
+++ b/custom/epoc-theme/editeur.html
@@ -41,8 +41,16 @@
                 <i class="fa fa-code-branch"></i>Code source
             </a>
         </div>
-        <div class="xl:text-right">
-            <img class="inline" src="/images/accueil-editeur.png" alt="alternative" />
+        <div class="xl:text-right home-video">
+            <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/86lbMmM03FU?controls=0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+            ></iframe>
         </div>
     </div> <!-- end of container -->
 </header> <!-- end of header -->
