Improve video embed

--- a/custom/epoc-theme/editeur.html
+++ b/custom/epoc-theme/editeur.html
@@ -42,13 +42,9 @@
             </a>
         </div>
         <div class="xl:text-right home-video">
-            <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/86lbMmM03FU?controls=0"
+            <iframe class="shadow-xl outline-none w-full"
+                    src="https://www.youtube.com/embed/86lbMmM03FU?modestbranding=1&autohide=1&rel=0&showinfo=0"
                     title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen
             ></iframe>
         </div>
