--- a/custom/epoc-theme/nav.html
+++ b/custom/epoc-theme/nav.html
@@ -10,7 +10,7 @@
             <img src="/images/logo-epoc-by-inria.png" alt="alternative" class="h-10" />
         </a>
 
-        <button class="background-transparent rounded text-xl leading-none hover:no-underline focus:no-underline lg:hidden lg:text-gray-400" type="button" data-toggle="offcanvas">
+        <button class="menu-button background-transparent rounded text-xl leading-none hover:no-underline focus:no-underline text-gray-400" type="button" data-toggle="offcanvas">
             <span class="navbar-toggler-icon inline-block w-8 h-8 align-middle"></span>
         </button>
 
