Basic setup for english version

--- a/custom/epoc-theme/home.html
+++ b/custom/epoc-theme/home.html
@@ -22,9 +22,9 @@
 <header id="header" class="header py-28 text-center md:pt-36 lg:text-left xl:pt-44 xl:pb-32">
     <div class="container px-4 sm:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
         <div class="mb-16 lg:mt-32 xl:mt-40 xl:mr-12">
-            <h1 class="h1-large mb-5">Application de mobile learning</h1>
-            <p class="p-large mb-8">Des formations courtes et ludiques proposées par des experts scientifiques.</p>
-            <p class="p-large mb-8">Gratuite et open <a href="{{ config.repo_url }}" target="_blank">source</a>. Développé par <a href="https://inria.fr/">Inria</a>.</p>
+            <h1 class="h1-medium mb-5">ePoc, l'apprentissage sur mobile libre et ouvert</h1>
+            <p class="p-large mb-8">ePoc (<b>E</b>lectronic <b>P</b>ocket <b>O</b>pen <b>C</b>ourse) est une solution complète de mobile learning libre et ouverte. Découvrez <a href="./epocs">nos cours</a> ou créez le votre à l'aide de <a href="./editor">l'éditeur</a>. </p>
+            <p class="p-large mb-8">Gratuite et <a href="{{ config.repo_url }}" target="_blank">open source</a>. Développé par <a href="https://inria.fr/" target="_blank">Inria</a>.</p>
             <a class="btn-solid-lg" href="{{ page.meta.apple_link if page.meta.apple_link else config.extra.apple_link }}"><i class="fab fa-apple"></i>Télécharger</a>
             <a class="btn-solid-lg" href="{{ page.meta.google_link if page.meta.apple_link else config.extra.google_link }}"><i class="fab fa-google-play"></i>Télécharger</a>
         </div>
@@ -59,8 +59,8 @@
                 <img src="images/science.svg" alt="alternative" />
             </div>
             <div class="card-body">
-                <h5 class="card-title">L'excellence scientifique</h5>
-                <p class="mb-4">Des contenus élaborés par des chercheurs Inria spécialistes du domaine.</p>
+                <h5 class="card-title">Ludique</h5>
+                <p class="mb-4">Des contenus ludiques et multimédias pour rester engagé.</p>
             </div>
         </div>
         <!-- end of card -->
