--- a/custom/epoc-theme/nav.html
+++ b/custom/epoc-theme/nav.html
@@ -54,13 +54,17 @@
                 {% endfor %}
             </ul>
             <span class="block lg:ml-3.5">
-                        <a class="no-underline" href="{{ page.meta.apple_link if page and page.meta.apple_link else config.extra.apple_link }}">
-                            <i class="fab fa-apple text-xl transition-all duration-200 mr-1.5"></i>
-                        </a>
-                        <a class="no-underline" href="{{ page.meta.google_link if page and page.meta.apple_link else config.extra.google_link }}">
-                            <i class="fab fa-android text-xl transition-all duration-200"></i>
-                        </a>
-                    </span>
+                <a class="no-underline" href="{{ page.meta.apple_link if page and page.meta.apple_link else config.extra.apple_link }}">
+                    <i class="fab fa-apple text-xl transition-all duration-200 mr-1.5"></i>
+                </a>
+                <a class="no-underline" href="{{ page.meta.google_link if page and page.meta.apple_link else config.extra.google_link }}">
+                    <i class="fab fa-android text-xl transition-all duration-200"></i>
+                </a>
+            </span>
+            <!-- Site language selector -->
+            {% if config.extra.alternate %}
+            {% include "partials/alternate.html" %}
+            {% endif %}
         </div> <!-- end of navbar-collapse -->
     </div> <!-- end of container -->
 </nav> <!-- end of navbar -->
